driver/cuda_new/device/include/pie_cuda_device.h

// ---------------------------------------------------------------------------
// Status / versioning
// ---------------------------------------------------------------------------

typedef enum PieStatus {
    PIE_OK = 0,
    PIE_ERR_INVALID_ARG = 1,
    PIE_ERR_CUDA = 2,
    PIE_ERR_OOM = 3,
    PIE_ERR_UNSUPPORTED_ARCH = 4,
    PIE_ERR_INTERNAL = 5,
} PieStatus;
// ABI version. Bumped on any breaking change to a struct layout or
// signature below. The Rust side asserts a match at load.
//   v1: lifecycle + construction/hot-path/graph stubs.
//   v2: raw device memory + first lifted kernel (rmsnorm).
//   v3: + residual_add, swiglu block primitives.
//   v4: + rope (kernel), gemm (bf16 cuBLAS op).
//   v5: + embed, argmax, naive paged attention (single-layer forward set).
//   v6: + composed llama_like decoder layer (first pie_body fragment).
//   v7: + real pie_ws_alloc + full llama_like forward (embed→layers→lm_head).
//   v8: + pie_cuda_device_props (SM count / compute capability for planning).
//   v9: + kv-append scatter, temp sampling, dtype casts, gather_rows.
//   v10: forward uses the KV scatter + takes num_kv_pages (general paged KV).
//   v11: + Gemma kernels (rmsnorm 1+w, geglu_tanh, logit_softcap), FP8 dequant.
//   v12: + YaRN RoPE (Llama-3), MoE router (topk_softmax) + chunked_swiglu.
//   v13: + rope_partial (Gemma-4), causal_conv1d (Mamba), int4 WNA16 dequant.
//   v14: + MoE MLP block (dense reference form).
//   v15: + MLA attention block (DeepSeek-style, absorbed, latent paged attn).
//   v16: + AltUp predict/correct (Gemma-3n/4 alternating residual streams).
//   v17: + grouped per-expert GEMM (sparse-MoE GEMM after dispatch scatter).
//   v18: + full MLA forward (embed → N×mla_block → final norm → lm_head → argmax).
//   v19: + full dense-MoE forward (llama attention + top-K MoE FFN per layer).
//   v20: + Mamba-2/SSD selective scan (Nemotron-H recurrence after causal conv).
//   v21: + int4 (u4b8) fused quant GEMM (internalized de-branded Marlin) + repack.
//   v22: + sparse token-dispatched MoE block (dispatch → grouped GEMM → combine).
//   v23: + Nemotron-H Mamba-2 mixer block (in_proj → conv → scan → gated norm).
//   v24: + full DeepSeek-V3/V4 forward (MLA attention + per-layer dense/MoE FFN).
//   v25: + Gemma-3/4 forward (sandwich norms, softcaps, sliding/full, embed scale).
//   v26: + Nemotron-H whole-model forward (hybrid Mamba/attention/FFN schedule).
//   v27: + fp8 (fe4m3fn) fused quant GEMM (qgemm fan-out over the int4 template).
//   v28: + per-head q/k-norm in the llama layer (Qwen3); q_norm/k_norm weights.
//   v29: + additive q/k/v projection biases in the llama layer (Qwen2).
//   v32: + FlashInfer tensor-core paged attention (plan/dispatch in the llama &
//        gemma forwards via attn_runtime); gemma_forward now takes a PieWorkspace
//        (persistent scratch, no per-fire cudaMalloc — also the CUDA-graph
//        prerequisite). llama_forward plans internally (no signature change).
#define PIE_CUDA_DEVICE_ABI_VERSION 32u
uint32_t pie_cuda_abi_version(void);
// Last error string for the calling thread (valid until the next ABI
// call on this thread). NULL when the last call returned PIE_OK.
const char* pie_cuda_last_error(void);
// ---------------------------------------------------------------------------
// Opaque handles — owned by the device lib, lifetime driven by Rust.
// ---------------------------------------------------------------------------

typedef struct PieDevCtx    PieDevCtx;     // device, stream, cuBLAS handle
typedef struct PieWeights   PieWeights;    // resident model weights
typedef struct PieKvCache   PieKvCache;    // paged KV / MLA / recurrent storage
typedef struct PieWorkspace PieWorkspace;  // per-step activation buffers + pinned inputs
typedef struct PieGraphExec PieGraphExec;  // a captured cudaGraphExec_t
// Selects which per-arch body/prepare to dispatch. Kept in lockstep
// with control/src/arch (ArchId).
typedef enum PieArchId {
    PIE_ARCH_LLAMA_LIKE = 0,
    PIE_ARCH_QWEN3 = 1,
    PIE_ARCH_QWEN3_5 = 2,
    PIE_ARCH_QWEN3_5_MOE = 3,
    PIE_ARCH_MIXTRAL = 4,
    PIE_ARCH_GEMMA2 = 5,
    PIE_ARCH_GEMMA3N = 6,
    PIE_ARCH_GEMMA4 = 7,
    PIE_ARCH_NEMOTRON_H = 8,
    PIE_ARCH_DEEPSEEK_V4 = 9,
    PIE_ARCH_KIMI = 10,
    PIE_ARCH_GLM5 = 11,
    PIE_ARCH_GPT_OSS = 12,
} PieArchId;
// ---------------------------------------------------------------------------
// POD argument structs (C layout, stable).
// ---------------------------------------------------------------------------

// All metadata to execute one forward body call. Mirrors driver/cuda's
// ForwardFn::ForwardInputs (executor.hpp:81). Pointers are device
// pointers unless suffixed _h (host/pinned).
typedef struct PieForwardInputs {
    const int32_t*  token_ids;
    const int32_t*  positions;

    const uint32_t* qo_indptr_d;
    const uint32_t* kv_page_indices_d;
    const uint32_t* kv_page_indptr_d;
    const uint32_t* kv_last_page_lens_d;
    const uint32_t* qo_indptr_h;
    const uint32_t* kv_page_indices_h;
    const uint32_t* kv_page_indptr_h;
    const uint32_t* kv_last_page_lens_h;

    int32_t total_tokens;     // N
    int32_t num_requests;     // R
    int32_t is_pure_decode;   // bool

    const uint8_t* custom_mask_d;          // optional BRLE-packed mask
    const int32_t* custom_mask_indptr_d;

    const int32_t* slot_ids_h;             // optional rs-cache slots
    const uint8_t* is_fresh_h;
    const int32_t* slot_ids_d;

    const int32_t* logit_row_indices_d;    // optional compact-logit gather
    int32_t        num_logit_rows;

    int32_t tp_greedy_argmax;              // bool

    const int32_t* commit_advance_gather_d;  // optional recurrent commit-advance
} PieForwardInputs;
// Host-side planning inputs (the prepare half). Mirrors
// ForwardFn::PrepareInputs (executor.hpp:128).
typedef struct PiePrepareInputs {
    const uint32_t* qo_indptr_h;
    const uint32_t* kv_page_indices_h;
    const uint32_t* kv_page_indices_d;
    const uint32_t* kv_page_indptr_h;
    const uint32_t* kv_page_indptr_d;
    const uint32_t* kv_last_page_lens_h;
    const uint32_t* kv_last_page_lens_d;
    int32_t total_tokens;
    int32_t num_requests;
    int32_t is_pure_decode;  // bool
} PiePrepareInputs;
// Sampling policy computed by Rust (control/src/sampler.rs). The argmax
// / categorical kernels stay C++; the policy + seeding is Rust.
typedef struct PieSampleParams {
    const float*   temperature;   // [num_rows] device
    const float*   top_p;         // [num_rows] device, NaN/1.0 = disabled
    const int32_t* top_k;         // [num_rows] device, <=0 = disabled
    const uint64_t* seed;         // [num_rows] device per-row PRNG seed
    int32_t num_rows;
    int32_t greedy;               // bool: argmax fast path, ignore temp/top_*
} PieSampleParams;
// KV cache geometry. Per-layer vectors are optional (NULL => homogeneous,
// use the scalar). Covers the cases driver/cuda's KvCache::allocate_per_layer
// handles (Gemma-4 dual head_dim + KV sharing).
typedef struct PieKvLayout {
    int32_t num_layers;
    int32_t num_pages;
    int32_t page_size;
    int32_t num_kv_heads;            // scalar fallback
    int32_t head_dim;                // scalar fallback
    uint32_t format;                 // PieKvFormat
    int32_t hnd_layout;              // bool (flashinfer HND)
    const int32_t* per_layer_head_dim;     // optional [num_layers]
    const int32_t* per_layer_num_kv_heads; // optional [num_layers]
    const int32_t* kv_source_layer;        // optional [num_layers] (KV sharing)
} PieKvLayout;
// Activation workspace sizing. Derived by the Rust arch + mem planner.
typedef struct PieWorkspaceDims {
    int32_t max_tokens;        // forward capacity (N)
    int32_t max_requests;      // R
    int32_t hidden_size;
    int32_t intermediate_size;
    int32_t num_heads;
    int32_t num_kv_heads;
    int32_t head_dim;
    int32_t vocab_size;
    int32_t num_layers;
    int32_t recurrent_state_slots;  // 0 if no Mamba/linear-attn state
    int32_t moe_experts;            // 0 if dense
} PieWorkspaceDims;
// ---------------------------------------------------------------------------
// Lifecycle / context
// ---------------------------------------------------------------------------

// Initialize the device library (one-time, process-global). `device_ordinal`
// is the CUDA device. Out param receives the context handle.
PieStatus pie_cuda_ctx_create(int32_t device_ordinal, PieDevCtx** out_ctx);
PieStatus pie_cuda_ctx_destroy(PieDevCtx* ctx);
// Total / free device memory in bytes (for the memory planner probe).
PieStatus pie_cuda_mem_info(PieDevCtx* ctx, size_t* out_free, size_t* out_total);
// SM count + compute capability (major.minor) — inputs to mem::plan's
// per-profile sizing.
PieStatus pie_cuda_device_props(PieDevCtx* ctx, int32_t* out_sm_count,
                                int32_t* out_major, int32_t* out_minor);
// ---------------------------------------------------------------------------
// Raw device memory — generic plumbing used by ops, the input staging
// buffers, and tests. Buffers are raw device pointers; lifetime is
// explicit. Copies run on the context stream; call pie_cuda_stream_sync
// before reading a D2H result on the host.
// ---------------------------------------------------------------------------

PieStatus pie_cuda_malloc(PieDevCtx* ctx, size_t nbytes, void** out_ptr);
PieStatus pie_cuda_free(PieDevCtx* ctx, void* ptr);
PieStatus pie_cuda_memcpy_h2d(PieDevCtx* ctx, void* dst, const void* src, size_t nbytes);
PieStatus pie_cuda_memcpy_d2h(PieDevCtx* ctx, void* dst, const void* src, size_t nbytes);
PieStatus pie_cuda_memcpy_d2d(PieDevCtx* ctx, void* dst, const void* src, size_t nbytes);
PieStatus pie_cuda_stream_sync(PieDevCtx* ctx);
// ---------------------------------------------------------------------------
// Composed forward (phase-1 vertical slice). One llama-like decoder layer,
// chaining the lifted primitives in C++. The first `pie_body` fragment;
// generalized into the full IModel-style body path later. See
// forward/llama_layer.cuh for the slice simplifications (per-call scratch,
// contiguous KV append).
// ---------------------------------------------------------------------------

// Per-layer weights (device bf16). HF row-major: wq [n_q_heads*head_dim,
// hidden], wk/wv [n_kv_heads*head_dim, hidden], wo [hidden, n_q_heads*
// head_dim], w_gate/w_up [intermediate, hidden], w_down [hidden,
// intermediate], attn_norm/ffn_norm [hidden].
typedef struct PieLlamaLayerWeights {
    const void* attn_norm;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
    const void* ffn_norm;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
    // Per-head q/k RMSNorm gains [head_dim] (Qwen3); both null = no qk-norm.
    const void* q_norm;
    const void* k_norm;
    // Additive q/k/v projection biases (Qwen2); null = no bias.
    const void* q_bias;
    const void* k_bias;
    const void* v_bias;
} PieLlamaLayerWeights;
// Whole-model weights. `layers` is a host array of `n_layers` per-layer
// weight structs (each field a device pointer). embed/lm_head [vocab,
// hidden], final_norm [hidden] — device bf16.
typedef struct PieLlamaWeights {
    const void* embed;
    const PieLlamaLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieLlamaWeights;
// Nemotron-H Mamba-2 mixer per-layer weights (device bf16, row-major). H=hidden,
// intermediate = num_heads*head_dim, conv_dim = intermediate + 2*n_groups*
// state_size, d_in_proj = intermediate + conv_dim + num_heads. in_proj_w
// [d_in_proj,H], conv_w [conv_dim,conv_kernel], conv_bias [conv_dim] (nullable),
// a_log/d/dt_bias [num_heads], norm_weight [intermediate], out_proj_w [H,intermediate].
typedef struct PieNemotronMambaWeights {
    const void* in_proj_w;
    const void* conv_w;
    const void* conv_bias;
    const void* a_log;
    const void* d;
    const void* dt_bias;
    const void* norm_weight;
    const void* out_proj_w;
} PieNemotronMambaWeights;
// Nemotron-H whole-model forward (hybrid Mamba/attention/FFN). Per-layer weights
// carry a `kind` ('M' Mamba | 'A' attention | 'F' FFN); only the matching union
// member is read. Attention = standard GQA; FFN = dense SwiGLU (stand-in for the
// upstream relu² MoE). The forward manages its own Mamba state + per-attn-layer
// KV pool internally (single fresh prefill). All weights device bf16, row-major.
typedef struct PieNemotronAttnWeights {
    const void* attn_norm;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
} PieNemotronAttnWeights;
typedef struct PieNemotronFfnWeights {
    const void* ffn_norm;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
} PieNemotronFfnWeights;
typedef struct PieNemotronLayerWeights {
    char kind;                          // 'M' | 'A' | 'F'
    const void* mamba_pre_norm;         // [H], used iff kind=='M'
    PieNemotronMambaWeights mamba;      // used iff kind=='M'
    PieNemotronAttnWeights attn;        // used iff kind=='A'
    PieNemotronFfnWeights ffn;          // used iff kind=='F'
} PieNemotronLayerWeights;
typedef struct PieNemotronWeights {
    const void* embed;
    const PieNemotronLayerWeights* layers;   // host array, length n_layers
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieNemotronWeights;
// Per-layer MLA (multi-head latent attention) weights — device bf16, row-major.
// H = hidden_size, nh = num_heads. W_uk/W_uv are PRE-TRANSPOSED per head for the
// absorbed inference form (see device/src/forward/mla_block.cuh for the full
// layout contract): W_uk [nh, kv_lora_rank, qk_nope_head_dim], W_uv [nh,
// v_head_dim, kv_lora_rank]. W_q_a [q_lora_rank, H], W_q_b [nh*(qk_nope+qk_rope),
// q_lora_rank], W_kv_a [kv_lora_rank+qk_rope, H], W_o [H, nh*v_head_dim].
typedef struct PieMlaLayerWeights {
    const void* attn_norm;
    const void* w_q_a;
    const void* q_a_ln;
    const void* w_q_b;
    const void* w_kv_a;
    const void* kv_a_ln;
    const void* w_uk;
    const void* w_uv;
    const void* w_o;
} PieMlaLayerWeights;
// Whole-model MLA weights. `layers` is a host array of `n_layers`
// PieMlaLayerWeights (each field a device pointer). embed/lm_head [vocab,
// hidden], final_norm [hidden] — device bf16.
typedef struct PieMlaWeights {
    const void* embed;
    const PieMlaLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieMlaWeights;
// Dense-MoE per-layer weights (device bf16, HF row-major). Hq=n_q_heads*head_dim,
// Hkv=n_kv_heads*head_dim, H=hidden, E=num_experts, I=intermediate. wq [Hq,H],
// wk/wv [Hkv,H], wo [H,Hq], router_w [E,H], wgu [E,2I,H] (gate||up), wdown [E,H,I].
typedef struct PieMoeLayerWeights {
    const void* attn_norm;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
    const void* ffn_norm;
    const void* router_w;
    const void* wgu;
    const void* wdown;
} PieMoeLayerWeights;
// Whole-model dense-MoE weights. `layers` host array of `n_layers` per-layer
// structs. embed/lm_head [vocab,hidden], final_norm [hidden] — device bf16.
typedef struct PieMoeWeights {
    const void* embed;
    const PieMoeLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieMoeWeights;
// Per-layer DeepSeek weights. `attn` = the 9 MLA attention pointers; `ffn_norm`
// + the dense (w_gate/w_up/w_down, used when the layer index < first_k_dense) OR
// MoE (router_w/wgu/wdown, used otherwise) FFN pointers. Unused set may be null.
typedef struct PieDeepseekLayerWeights {
    PieMlaLayerWeights attn;
    const void* ffn_norm;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
    const void* router_w;
    const void* wgu;
    const void* wdown;
} PieDeepseekLayerWeights;
// Whole-model DeepSeek weights. `layers` host array of `n_layers` per-layer
// structs. embed/lm_head [vocab,hidden], final_norm [hidden] — device bf16.
typedef struct PieDeepseekWeights {
    const void* embed;
    const PieDeepseekLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieDeepseekWeights;
// Per-layer Gemma "sandwich" weights (device bf16, row-major): 4 (1+w) RMSNorm
// gains + standard attention + geglu MLP projections. Hq=n_q_heads*head_dim,
// Hkv=n_kv_heads*head_dim. wq [Hq,H], wk/wv [Hkv,H], wo [H,Hq], w_gate/w_up
// [I,H], w_down [H,I].
typedef struct PieGemmaLayerWeights {
    const void* input_ln;
    const void* post_attn_ln;
    const void* pre_ffn_ln;
    const void* post_ffn_ln;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
} PieGemmaLayerWeights;
// Whole-model Gemma weights. `layers` host array of `n_layers` per-layer structs.
// embed/lm_head [vocab,hidden], final_norm [hidden] (rmsnorm_gemma 1+w gain).
typedef struct PieGemmaWeights {
    const void* embed;
    const PieGemmaLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieGemmaWeights;