driver/cuda_new/control/src/ffi.rs

//! Raw `extern "C"` declarations over `device/include/pie_cuda_device.h`.
//!
//! Hand-written rather than bindgen'd: the ABI is small, curated, and
//! stable, and a hand-written surface is the single readable place to
//! audit the boundary. Keep it byte-for-byte in lockstep with the header
//! (PIE_CUDA_DEVICE_ABI_VERSION gates a runtime check in `device.rs`).
#![allow(non_camel_case_types, dead_code)]

use std::os::raw::{c_char, c_void};

pub const ABI_VERSION: u32 = 32;

#[repr(C)]
#[derive(Copy, Clone, Eq, PartialEq, Debug)]
pub enum PieStatus {
    Ok = 0,
    InvalidArg = 1,
    Cuda = 2,
    Oom = 3,
    UnsupportedArch = 4,
    Internal = 5,
}

// Mirrors PieArchId in the header. Keep discriminants in lockstep.
#[repr(i32)]
#[derive(Copy, Clone, Eq, PartialEq, Debug)]
pub enum PieArchId {
    LlamaLike = 0,
    Qwen3 = 1,
    Qwen3_5 = 2,
    Qwen3_5Moe = 3,
    Mixtral = 4,
    Gemma2 = 5,
    Gemma3n = 6,
    Gemma4 = 7,
    NemotronH = 8,
    DeepseekV4 = 9,
    Kimi = 10,
    Glm5 = 11,
    GptOss = 12,
}

// Opaque handles — never constructed in Rust, only held as pointers.
#[repr(C)] pub struct PieDevCtx { _p: [u8; 0] }
#[repr(C)] pub struct PieWeights { _p: [u8; 0] }
#[repr(C)] pub struct PieKvCache { _p: [u8; 0] }
#[repr(C)] pub struct PieWorkspace { _p: [u8; 0] }
#[repr(C)] pub struct PieGraphExec { _p: [u8; 0] }

#[repr(C)]
pub struct PieForwardInputs {
    pub token_ids: *const i32,
    pub positions: *const i32,
    pub qo_indptr_d: *const u32,
    pub kv_page_indices_d: *const u32,
    pub kv_page_indptr_d: *const u32,
    pub kv_last_page_lens_d: *const u32,
    pub qo_indptr_h: *const u32,
    pub kv_page_indices_h: *const u32,
    pub kv_page_indptr_h: *const u32,
    pub kv_last_page_lens_h: *const u32,
    pub total_tokens: i32,
    pub num_requests: i32,
    pub is_pure_decode: i32,
    pub custom_mask_d: *const u8,
    pub custom_mask_indptr_d: *const i32,
    pub slot_ids_h: *const i32,
    pub is_fresh_h: *const u8,
    pub slot_ids_d: *const i32,
    pub logit_row_indices_d: *const i32,
    pub num_logit_rows: i32,
    pub tp_greedy_argmax: i32,
    pub commit_advance_gather_d: *const i32,
}

#[repr(C)]
pub struct PiePrepareInputs {
    pub qo_indptr_h: *const u32,
    pub kv_page_indices_h: *const u32,
    pub kv_page_indices_d: *const u32,
    pub kv_page_indptr_h: *const u32,
    pub kv_page_indptr_d: *const u32,
    pub kv_last_page_lens_h: *const u32,
    pub kv_last_page_lens_d: *const u32,
    pub total_tokens: i32,
    pub num_requests: i32,
    pub is_pure_decode: i32,
}

#[repr(C)]
pub struct PieSampleParams {
    pub temperature: *const f32,
    pub top_p: *const f32,
    pub top_k: *const i32,
    pub seed: *const u64,
    pub num_rows: i32,
    pub greedy: i32,
}

#[repr(C)]
pub struct PieKvLayout {
    pub num_layers: i32,
    pub num_pages: i32,
    pub page_size: i32,
    pub num_kv_heads: i32,
    pub head_dim: i32,
    pub format: u32,
    pub hnd_layout: i32,
    pub per_layer_head_dim: *const i32,
    pub per_layer_num_kv_heads: *const i32,
    pub kv_source_layer: *const i32,
}

#[repr(C)]
pub struct PieLlamaLayerWeights {
    pub attn_norm: *const c_void,
    pub wq: *const c_void,
    pub wk: *const c_void,
    pub wv: *const c_void,
    pub wo: *const c_void,
    pub ffn_norm: *const c_void,
    pub w_gate: *const c_void,
    pub w_up: *const c_void,
    pub w_down: *const c_void,
    pub q_norm: *const c_void,
    pub k_norm: *const c_void,
    pub q_bias: *const c_void,
    pub k_bias: *const c_void,
    pub v_bias: *const c_void,
}

#[repr(C)]
pub struct PieLlamaWeights {
    pub embed: *const c_void,
    pub layers: *const PieLlamaLayerWeights,
    pub n_layers: i32,
    pub final_norm: *const c_void,
    pub lm_head: *const c_void,
}

#[repr(C)]
pub struct PieMlaLayerWeights {
    pub attn_norm: *const c_void,
    pub w_q_a: *const c_void,
    pub q_a_ln: *const c_void,
    pub w_q_b: *const c_void,
    pub w_kv_a: *const c_void,
    pub kv_a_ln: *const c_void,
    pub w_uk: *const c_void,
    pub w_uv: *const c_void,
    pub w_o: *const c_void,
}

#[repr(C)]
pub struct PieMlaWeights {
    pub embed: *const c_void,
    pub layers: *const PieMlaLayerWeights,
    pub n_layers: i32,
    pub final_norm: *const c_void,
    pub lm_head: *const c_void,
}

#[repr(C)]
pub struct PieGemmaLayerWeights {
    pub input_ln: *const c_void,
    pub post_attn_ln: *const c_void,
    pub pre_ffn_ln: *const c_void,
    pub post_ffn_ln: *const c_void,
    pub wq: *const c_void,
    pub wk: *const c_void,
    pub wv: *const c_void,
    pub wo: *const c_void,
    pub w_gate: *const c_void,
    pub w_up: *const c_void,
    pub w_down: *const c_void,
}

#[repr(C)]
pub struct PieGemmaWeights {
    pub embed: *const c_void,
    pub layers: *const PieGemmaLayerWeights,
    pub n_layers: i32,
    pub final_norm: *const c_void,
    pub lm_head: *const c_void,
}

#[repr(C)]
pub struct PieDeepseekLayerWeights {
    pub attn: PieMlaLayerWeights,
    pub ffn_norm: *const c_void,
    pub w_gate: *const c_void,
    pub w_up: *const c_void,
    pub w_down: *const c_void,
    pub router_w: *const c_void,
    pub wgu: *const c_void,
    pub wdown: *const c_void,
}

#[repr(C)]
pub struct PieDeepseekWeights {
    pub embed: *const c_void,
    pub layers: *const PieDeepseekLayerWeights,
    pub n_layers: i32,
    pub final_norm: *const c_void,
    pub lm_head: *const c_void,
}

#[repr(C)]
pub struct PieNemotronAttnWeights {
    pub attn_norm: *const c_void,
    pub wq: *const c_void,
    pub wk: *const c_void,
    pub wv: *const c_void,
    pub wo: *const c_void,
}

#[repr(C)]
pub struct PieNemotronFfnWeights {
    pub ffn_norm: *const c_void,
    pub w_gate: *const c_void,
    pub w_up: *const c_void,
    pub w_down: *const c_void,
}

#[repr(C)]
pub struct PieNemotronLayerWeights {
    pub kind: i8, // 'M' | 'A' | 'F'
    pub mamba_pre_norm: *const c_void,
    pub mamba: PieNemotronMambaWeights,
    pub attn: PieNemotronAttnWeights,
    pub ffn: PieNemotronFfnWeights,
}

#[repr(C)]
pub struct PieNemotronWeights {
    pub embed: *const c_void,
    pub layers: *const PieNemotronLayerWeights,
    pub n_layers: i32,
    pub final_norm: *const c_void,
    pub lm_head: *const c_void,
}

#[repr(C)]
pub struct PieNemotronMambaWeights {
    pub in_proj_w: *const c_void,
    pub conv_w: *const c_void,
    pub conv_bias: *const c_void,
    pub a_log: *const c_void,
    pub d: *const c_void,
    pub dt_bias: *const c_void,
    pub norm_weight: *const c_void,
    pub out_proj_w: *const c_void,
}

#[repr(C)]
pub struct PieMoeLayerWeights {
    pub attn_norm: *const c_void,
    pub wq: *const c_void,
    pub wk: *const c_void,
    pub wv: *const c_void,
    pub wo: *const c_void,
    pub ffn_norm: *const c_void,
    pub router_w: *const c_void,
    pub wgu: *const c_void,
    pub wdown: *const c_void,
}

#[repr(C)]
pub struct PieMoeWeights {
    pub embed: *const c_void,
    pub layers: *const PieMoeLayerWeights,
    pub n_layers: i32,
    pub final_norm: *const c_void,
    pub lm_head: *const c_void,
}

#[repr(C)]
pub struct PieWorkspaceDims {
    pub max_tokens: i32,
    pub max_requests: i32,
    pub hidden_size: i32,
    pub intermediate_size: i32,
    pub num_heads: i32,
    pub num_kv_heads: i32,
    pub head_dim: i32,
    pub vocab_size: i32,
    pub num_layers: i32,
    pub recurrent_state_slots: i32,
    pub moe_experts: i32,
}

unsafe extern "C" {
    pub fn pie_cuda_abi_version() -> u32;
    pub fn pie_cuda_last_error() -> *const c_char;

    pub fn pie_cuda_ctx_create(device_ordinal: i32, out: *mut *mut PieDevCtx) -> PieStatus;
    pub fn pie_cuda_ctx_destroy(ctx: *mut PieDevCtx) -> PieStatus;
    pub fn pie_cuda_mem_info(ctx: *mut PieDevCtx, free: *mut usize, total: *mut usize) -> PieStatus;
    pub fn pie_cuda_device_props(ctx: *mut PieDevCtx, sm_count: *mut i32, major: *mut i32,
                                 minor: *mut i32) -> PieStatus;

    pub fn pie_cuda_malloc(ctx: *mut PieDevCtx, nbytes: usize, out: *mut *mut c_void) -> PieStatus;
    pub fn pie_cuda_free(ctx: *mut PieDevCtx, ptr: *mut c_void) -> PieStatus;
    pub fn pie_cuda_memcpy_h2d(ctx: *mut PieDevCtx, dst: *mut c_void, src: *const c_void, nbytes: usize) -> PieStatus;
    pub fn pie_cuda_memcpy_d2h(ctx: *mut PieDevCtx, dst: *mut c_void, src: *const c_void, nbytes: usize) -> PieStatus;
    pub fn pie_cuda_memcpy_d2d(ctx: *mut PieDevCtx, dst: *mut c_void, src: *const c_void, nbytes: usize) -> PieStatus;
    pub fn pie_cuda_stream_sync(ctx: *mut PieDevCtx) -> PieStatus;
